[workspace]
resolver = "2"
members = [
    "contracts/gas-distributor",
    "contracts/lazy-staking",
]

[workspace.dependencies]
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", branch = "feat/proposal-votes" }
cosmwasm-std = { version = "1.5.4", default-features = false, features = [
    "stargate",
    "cosmwasm_1_2",
] }
cw-ownable = { version = "0.5.1", default-features = false }
thiserror = { version = "1.0.56", default-features = false }
cw-multi-test = { version = "0.20.0", default-features = false }
cw-utils = { version = "1.0.3", default-features = false }
cw2 = { version = "1.1.2", default-features = false }
cw-storage-plus = { version = "1.2.0", default-features = false }
cosmwasm-schema = { version = "1.5.4", default-features = false }
serde = { version = "1.0.195", default-features = false }
semver = { version = "1.0.22", default-features = false }
cosmos-sdk-proto = { version = "0.20.0", default-features = false }

drop-helper-contracts-base = { path = "./packages/base", default-features = false }
drop-helper-contracts-helpers = { path = "./packages/helpers", default-features = false }

[profile.release]
ops-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true